Fix: Update Location Z-index

--- a/src/Components/Map/Map.css
+++ b/src/Components/Map/Map.css
@@ -2,6 +2,7 @@
   width: 60px;
   height: 60px;
   background-size: 100%;
+  z-index: 2;
 }
 
 .driver {
